<resources>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="buy_now_">Buy now!</string>
    <string name="text_new">New</string>
    <string name="iphone_12">Iphone 12</string>
    <string name="product_det">Product Details</string>
    <string name="shop">Shop</string>
    <string name="details">Details</string>
    <string name="features">Features</string>
    <string name="select_colo">Select color and capacity</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="zihuatanejo">Zihuatanejo, Gro</string>
    <string name="select_cate">Select Category</string>
    <string name="view_all">view all</string>
    <string name="phones">Phones</string>
    <string name="computer">Computer</string>
    <string name="books">Books</string>
    <string name="healt">Healt</string>
    <string name="hot_sales">Hot sales</string>
    <string name="see_more">see more</string>
    <string name="filter_options">Filter options</string>
    <string name="done">Done</string>
    <string name="add_address">Add address</string>
    <string name="my_cart">My Cart</string>
    <string name="checkout">Chekout</string>
    <string name="total">Total</string>
    <string name="delivery">Delivery</string>
    <string name="brand">Brand</string>
    <string name="price">Price</string>
    <string name="size">Size</string>
    <string name="ecommerce_c">Ecommerce \nConcept</string>
</resources>